crates/vexor-compiler/tests/golden/error/output/stroke_arity.err
parse error at line 3, column 29
  |
3 | let stroked = stroke(2.0, c)
  |                             ^
